--- a/wofs_ml_severe/conf/ml_config_2020-current.yml
+++ b/wofs_ml_severe/conf/ml_config_2020-current.yml
@@ -2,7 +2,7 @@
 # MACHINE LEARNING CONFIGURATION YAML
 #######################################
 
-UH_THRESHS : [ 50,  60,  70,  80,  90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240, 250]
+UH_THRESHS : [ 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240, 250]
 WIND_THRESHS : [30, 35, 40, 45, 50, 55, 60, 65, 70]
 HAIL_THRESHS : [0.5 , 0.75, 1.  , 1.25, 1.5]
 
@@ -90,7 +90,8 @@ SVR_VARS : [ 'srh_0to1',
 ENS_MIN_VARS : [ 'ctt',
              'buoyancy',
              'div_10m',
-             'w_down'
+             'w_down',
+             'okubo_weiss',
              ]
 
 MORPHOLOGICAL_FEATURES : [
@@ -99,7 +100,8 @@ MORPHOLOGICAL_FEATURES : [
                           'extent',
                           'orientation',
                           'minor_axis_length',
-                          'major_axis_length', 
+                          'major_axis_length',
+                          'intensity_max',
                           ]
     
 RESAMPLE_DICT : 
