--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ hyperopt==0.2.7
 python==3.8.10
 scikit-image>=0.19
 xarray>=0.18 
-scikit-learn=1.0.2
+scikit-learn==1.0.2
 scikit-learn-intelex==2023.0.1
 xgboost==1.7.1
 imbalanced-learn==0.10.1
