--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,9 @@ stages:
           vmImage: $(vmImageName)
         strategy:
           matrix:
+            Python310:
+              python.version: '3.10'              
+              env_file: 'environment_py310.yml'
             Python38:
               python.version: '3.8'              
               env_file: 'environment_py38.yml'
