--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,12 +2,17 @@ trigger:
 - main
 
 parameters:
+- name: vargroup
+  displayName: DevOps variable group
+  type: string
+  default: "wofs-pipeline-variables" 
 - name: package_version
   displayName: Package Version
   type: string
   default: 1.1
 
 variables:
+- group: ${{ parameters.vargroup }}
 - name: PACKAGE_VERSION
   value: ${{ parameters.package_version }}.$(Build.BuildId)
 - name: vmImageName
@@ -18,9 +23,9 @@ stages:
   displayName: Build Package
   jobs:
       - job:
-        displayName: ${{ variables.vmImageName }}
+        displayName: $(DEFAULT_POOL_IMAGE)
         pool:
-          vmImage: $(vmImageName)
+          vmImage: $(DEFAULT_POOL_IMAGE)
         strategy:
           matrix:
             Python310:
@@ -71,9 +76,10 @@ stages:
 
         - task: GithubRelease@1 
           displayName: 'Create GitHub Release'
+          condition: eq(variables['AZ_DEVOPS_DEPLOY_GITHUB'], 'TRUE')
           inputs:
-            gitHubConnection: WarnOnForecast-Github
-            repositoryName: WarnOnForecast/wofs_ml_severe
+            gitHubConnection: $(AZ_DEVOPS_GITHUB_SERVICE_CONNECTION_NAME)
+            repositoryName: $(AZ_DEVOPS_GITHUB_ORGANIZATION_NAME)/wofs_ml_severe
             isPreRelease: false
             tagSource: userSpecifiedTag
             assets: dist/*.whl
