--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ stages:
 
         - task: GithubRelease@1 
           displayName: 'Create GitHub Release'
-          condition: eq(variables['AZ_DEVOPS_DEPLOY_GITHUB'], 'TRUE')
+          condition: and(succeeded(), eq(variables['AZ_DEVOPS_DEPLOY_GITHUB'], 'TRUE'))
           inputs:
             gitHubConnection: $(AZ_DEVOPS_GITHUB_SERVICE_CONNECTION_NAME)
             repositoryName: $(AZ_DEVOPS_GITHUB_ORGANIZATION_NAME)/frdd-wofs-ml-severe
