--- a/environment_py310.yml
+++ b/environment_py310.yml
@@ -7,9 +7,11 @@ dependencies:
   - pip=23.3.2
   - scikit-image>=0.19
   - xarray>=0.18  
+  - numpy=1.22.4  
   - pandas>=1.3.0
   - scikit-learn=1.0.2
   - scikit-learn-intelex=2023.0.1
+  - setuptools=70.*  
   - pip:
     - tensorflow==2.15.0
     - jax==0.4.24
