--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,9 +30,9 @@ stages:
             Python310:
               python.version: '3.10'              
               env_file: 'environment_py310.yml'
-            Python38:
-              python.version: '3.8'              
-              env_file: 'environment_py38.yml'
+            # Python38:
+            #   python.version: '3.8'              
+            #   env_file: 'environment_py38.yml'
               
         steps:
         - bash: echo "##vso[task.prependpath]$CONDA/bin"
